base doctype updated and template is done

--- a/src/html/includes/_template.jade
+++ b/src/html/includes/_template.jade
@@ -6,10 +6,10 @@ html(lang="en")
     meta(name="viewport",              content ="width=device-width, initial-scale=1.0")
     meta(name="robots",                content ="index, follow")
     meta(name="author",                content ="Luan Vicente")
-    meta(name="description",           content ="Photographer UI Design")
+    meta(name="description",           content ="Apollo - Photographer UI Design")
 
     title
-      title Photographer UI Design
+      title Apollo
 
   body
-
+    block content
