main frame markup

--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -28,3 +28,15 @@ block content
 
         footer.main-footer
           p.copy &copy; 2016 Apollo.
+
+    //- Content of Main Frame
+    section.main-frame
+      h2.title Apollo
+        span.lighttext Photographer UI Design
+      p.description
+        | Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+        | sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+        | enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+        | ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+        | reprehenderit in voluptate velit esse cillum dolore.
+      img.photo(src="assets/images/photo-back.png" alt="John Apollo Picture")
