--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -40,3 +40,22 @@ block content
         | ut aliquip ex ea commodo consequat. Duis aute irure dolor in
         | reprehenderit in voluptate velit esse cillum dolore.
       img.photo(src="assets/images/photo-back.png" alt="John Apollo Picture")
+
+
+    //- About Frame
+    section.about-frame
+      img.photo(src="assets/images/photo-camera.png" alt="Camera Picture")
+      h2.title <span class="lighttext">$#8212; My name is</span> Apollo
+      p.description
+        | Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+        | eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+        | minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+        | aliquip ex ea commodo consequat.  Duis aute irure dolor in
+        | reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+        | pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+        | culpa qui officia deserunt mollit anim id est laborum.
+      ul.social-list
+        li.social.facebook: a.link(href="#") Facebook
+        li.social.instagram: a.link(href="#") Instagram
+        li.social.twitter: a.link(href="#") Twitter
+        li.social.pinterest: a.link(href="#") Pinterest
