--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -59,3 +59,22 @@ block content
         li.social.instagram: a.link(href="#") Instagram
         li.social.twitter: a.link(href="#") Twitter
         li.social.pinterest: a.link(href="#") Pinterest
+
+
+    //- Large Slideshow Frame
+    //- ...
+
+
+    //- Photography Frame
+    section.photography-frame
+      h2.title Ut enim
+        span.lighttext ad minim
+      p.description
+        | Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+        | eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+        | minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+        | aliquip ex ea commodo consequat.  Duis aute irure dolor in
+        | reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+        | pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+        | culpa qui officia deserunt mollit anim id est laborum.
+      img.photo(src="assets/images/photo-stairs.png" alt="Stairs Photo")
