--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -78,3 +78,22 @@ block content
         | pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
         | culpa qui officia deserunt mollit anim id est laborum.
       img.photo(src="assets/images/photo-stairs.png" alt="Stairs Photo")
+
+
+    //- Small Slideshow Frame
+    //- ...
+
+
+    //- Contact Frame
+    section.contact-frame
+      h2.title Say
+        span.lighttext Hello
+      p.description
+        | Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+        | eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+        | minim veniam, quis nostrud exercitation ullamco laboris nisi ut.
+      form.contact-form
+        input.field.basic(type="email", placeholder="Your Email")
+        input.field.basic(type="text", placeholder="Subject")
+        textarea.field.message(rows="10" cols="30")
+        input.send(type="submit" value="Send Message" role="button")
