fix general document structure

--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -29,10 +29,11 @@ block content
         footer.main-footer
           p.copy &copy; 2016 Apollo.
 
-    //- Content of Main Frame
+  //- Content of Main Frame
+  .content-wrapper
     section.main-frame
       h2.title Apollo
-        span.lighttext Photographer UI Design
+        span.lighttext  Photographer UI Design
       p.description
         | Lorem ipsum dolor sit amet, consectetur adipisicing elit,
         | sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
@@ -42,7 +43,8 @@ block content
       img.photo(src="assets/images/photo-back.png" alt="John Apollo Picture")
 
 
-    //- About Frame
+  //- About Frame
+  .content-wrapper
     section.about-frame
       img.photo(src="assets/images/photo-camera.png" alt="Camera Picture")
       h2.title <span class="lighttext">$#8212; My name is</span> Apollo
@@ -61,14 +63,15 @@ block content
         li.social.pinterest: a.link(href="#") Pinterest
 
 
-    //- Large Slideshow Frame
-    //- ...
+  //- Large Slideshow Frame
+  //- ...
 
 
-    //- Photography Frame
+  //- Photography Frame
+  .content-wrapper
     section.photography-frame
       h2.title Ut enim
-        span.lighttext ad minim
+        span.lighttext  ad minim
       p.description
         | Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
         | eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -80,14 +83,15 @@ block content
       img.photo(src="assets/images/photo-stairs.png" alt="Stairs Photo")
 
 
-    //- Small Slideshow Frame
-    //- ...
+  //- Small Slideshow Frame
+  //- ...
 
 
-    //- Contact Frame
+  //- Contact Frame
+  .content-wrapper
     section.contact-frame
       h2.title Say
-        span.lighttext Hello
+        span.lighttext  Hello
       p.description
         | Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
         | eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
