--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -47,7 +47,7 @@ block content
   .content-wrapper
     section.about-frame
       img.photo(src="assets/images/photo-camera.png" alt="Camera Picture")
-      h2.title <span class="lighttext">$#8212; My name is</span> Apollo
+      h2.title <span class="lighttext">&#8212; My name is</span> Apollo
       p.description
         | Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
         | eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -80,7 +80,7 @@ block content
         | reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
         | pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
         | culpa qui officia deserunt mollit anim id est laborum.
-      img.photo(src="assets/images/photo-stairs.png" alt="Stairs Photo")
+      img.photo(src="assets/images/photo-stairs.jpg" alt="Stairs Photo")
 
 
   //- Small Slideshow Frame
