--- a/src/html/includes/_template.jade
+++ b/src/html/includes/_template.jade
@@ -8,7 +8,12 @@ html(lang="en")
     meta(name="author",                content ="Luan Vicente")
     meta(name="description",           content ="Apollo - Photographer UI Design")
 
+    link(rel="stylesheet" href="assets/css/bootstrap.min.css")
+
     title Apollo
 
   body
     block content
+
+    script(src="http://code.jquery.com/jquery-3.1.1.slim.min.js")
+    script(src="assets/js/bootstrap.min.js")
