--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -71,13 +71,17 @@ block content
 
         div(class="carousel-inner" role="listbox")
           div(class="item active")
-            img(src="assets/images/photo-girl-camera.jpg" alt="")
+            img(src="assets/images/photo-girl-camera.jpg",
+                alt="Picture of Photographer")
 
           div(class="item")
-            img(src="assets/images/photo-girl-bike.jpg" alt="...")
+            img(src="assets/images/photo-girl-camera-2.jpg",
+                alt="Picture of Photographer")
 
-        a(class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev")
-        a(class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next")
+        a(class="left carousel-control", href="#carousel-example-generic",
+          role="button" data-slide="prev")
+        a(class="right carousel-control", href="#carousel-example-generic",
+          role="button" data-slide="next")
 
 
   //- Photography Frame
