--- a/src/html/includes/_template.jade
+++ b/src/html/includes/_template.jade
@@ -10,6 +10,7 @@ html(lang="en")
 
     link(rel="stylesheet",
          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css")
+    link(rel="stylesheet" href="assets/css/main.css")
 
     title Apollo
 
