--- a/src/css/settings/_fonts.styl
+++ b/src/css/settings/_fonts.styl
@@ -1,1 +1,4 @@
-font_default = sans-serif
+@import url("https://fonts.googleapis.com/css?family=Alegreya:400i|Raleway:300,400,700")
+
+font_default   = "Raleway"
+font_secondary = "Alegreya"
