general objects definitions #02

--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -21,6 +21,8 @@
 @import 'objects/_general'
 @import 'objects/_clearfix'
 @import 'objects/_wrappers'
+@import 'objects/_arrows'
+@import 'objects/_fields'
 
 
 // COMPONENTS
