--- a/src/css/objects/_wrappers.styl
+++ b/src/css/objects/_wrappers.styl
@@ -1,12 +1,14 @@
 .content-wrapper
-  height: 90vh
   padding: 1em
   margin: 1em
   background-color: color_lightgray
   background-image: url('../images/letter-a.png')
   background-repeat: no-repeat
-  background-size: contain
-  background-position: left
+  background-size: cover
+  background-position: center
+
+  /* TEMPORARY */
+  border: 1px solid black
 
   /* @media 768px */
   @media (min-width: 768px)
