fix content wrapper

--- a/src/css/objects/_wrappers.styl
+++ b/src/css/objects/_wrappers.styl
@@ -1,8 +1,9 @@
 .content-wrapper
-  padding: 1em
+  padding-top: 1em
+  padding-right: 1em
+  padding-left: 1em
   margin: 1em
   background-color: color_lightgray
-  background-image: url('../images/letter-a.png')
   background-repeat: no-repeat
   background-size: cover
   background-position: center
