--- a/src/css/objects/_wrappers.styl
+++ b/src/css/objects/_wrappers.styl
@@ -9,7 +9,7 @@
   background-position: center
 
   /* TEMPORARY */
-  border: 1px solid black
+  //border: 1px solid black
 
   /* @media 768px */
   @media (min-width: 768px)
