--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -3,7 +3,7 @@ extends includes/_template.jade
 block content
 
   //- Main Frame
-  section.main-frame#home
+  section.frame.main-frame#home
 
     //- Main Header
     header.main-header
@@ -43,7 +43,7 @@ block content
 
 
   //- About Frame
-  section.about-frame#about
+  section.frame.about-frame#about
     .content-wrapper
       img.photo(src="assets/images/photo-camera.png" alt="Camera Picture")
       div.text-box
@@ -64,7 +64,7 @@ block content
 
 
   //- Large Slideshow Frame
-  section.largeslideshow-frame#largeslideshow
+  section.frame.largeslideshow-frame#largeslideshow
     .content-wrapper
       div(id="large-slideshow" class="carousel slide" data-ride="carousel")
         ol(class="carousel-indicators")
@@ -85,7 +85,7 @@ block content
 
 
   //- Photography Frame
-  section.photography-frame#photos
+  section.frame.photography-frame#photos
     .content-wrapper
       div.text-box
         h2.title Ut enim
@@ -102,7 +102,7 @@ block content
 
 
   //- Small Slideshow Frame
-  section.smallslideshow-frame#smallslideshow
+  section.frame.smallslideshow-frame#smallslideshow
     .content-wrapper
       div(id="small-slideshow" class="carousel slide" data-ride="carousel")
         ol(class="carousel-indicators")
@@ -127,7 +127,7 @@ block content
 
 
   //- Contact Frame
-  section.contact-frame#contact
+  section.frame.contact-frame#contact
     .content-wrapper
       h2.title Say
         span.lighttext  Hello
