--- a/src/css/objects/_wrappers.styl
+++ b/src/css/objects/_wrappers.styl
@@ -14,10 +14,8 @@
 
 
 .content-wrapper
-  padding-right: 1em
-  padding-left: 1em
+  padding: 1em
 
   /* @media 768px */
   @media (min-width: 768px)
-    padding-right: 2.5em
-    padding-left: 2.5em
+    padding-top: 2.5em
