large slideshow frame

--- a/src/css/objects/_arrows.styl
+++ b/src/css/objects/_arrows.styl
@@ -3,12 +3,17 @@
 .carousel-control.right
   display: block
   width: auto
-  height: 72px
-  padding: 1em
+  height: 40px
+  padding: 0.2em
+  margin-top: 25%
   background-image: none
   background-color: #fff
   opacity: 1
 
+.carousel-control.left
+  margin-left: 0.5em
+.carousel-control.right
+  margin-right: 0.5em
 
 .back
 .next
