--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -29,3 +29,4 @@
 @import 'components/_general'
 @import 'components/_main-frame'
 @import 'components/_about-frame'
+@import 'components/_largeslideshow-frame'
