photography and small slideshow frames

--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -30,3 +30,5 @@
 @import 'components/_main-frame'
 @import 'components/_about-frame'
 @import 'components/_largeslideshow-frame'
+@import 'components/_photography-frame'
+@import 'components/_smallslideshow-frame'
