--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -32,3 +32,4 @@
 @import 'components/_largeslideshow-frame'
 @import 'components/_photography-frame'
 @import 'components/_smallslideshow-frame'
+@import 'components/_contact'
