--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -138,5 +138,5 @@ block content
       form.contact-form
         input.field.basic(type="email", placeholder="Your Email")
         input.field.basic(type="text", placeholder="Subject")
-        textarea.field.message(rows="10" cols="30")
+        textarea.field.message(rows="10", cols="30", placeholder="Message")
         input.button(type="submit" value="Send Message" role="button")
