main header and menu

--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -27,6 +27,8 @@
 
 // COMPONENTS
 @import 'components/_general'
+@import 'components/_toggle-menu'
+@import 'components/_header-content'
 @import 'components/_main-frame'
 @import 'components/_about-frame'
 @import 'components/_largeslideshow-frame'
