--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -10,9 +10,11 @@ block content
 
       div.toggle-menu
         h3.title Menu
-        span.togglebutton Open
+        span.togglebutton
 
       div.header-content
+        span.togglebutton
+
         h1.title Apollo
 
         nav.main-navigation
