--- a/src/css/components/_header-content.styl
+++ b/src/css/components/_header-content.styl
@@ -10,6 +10,8 @@
   color: color_lightgray
   background-color: #000
   box-shadow: -1em 0 5em #555
+  transform: translateX(120%)
+  transition: all 0.5s
 
   > .togglebutton
     display: block
@@ -34,3 +36,6 @@
         > .link
           set_font-size(18px)
           color: steelblue
+
+.open
+  transform: translateX(0)
