--- a/src/html/includes/_template.jade
+++ b/src/html/includes/_template.jade
@@ -19,3 +19,4 @@ html(lang="en")
 
     script(src="http://code.jquery.com/jquery-3.1.1.min.js")
     script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js")
+    script(src="assets/js/main.js")
