fix background letters

--- a/src/css/objects/_wrappers.styl
+++ b/src/css/objects/_wrappers.styl
@@ -8,6 +8,8 @@
   /* @media 768px */
   @media (min-width: 768px)
     margin: 2.5em
+    background-size: contain
+    background-position: 10% 100%
 
 
 .content-wrapper
