--- a/src/css/components/_header-content.styl
+++ b/src/css/components/_header-content.styl
@@ -20,6 +20,7 @@
     height: 16px
     margin: 1em
     background-image: url('../images/close.png')
+    cursor: pointer
 
   > .main-navigation
 
