main frame (tablet)

--- a/src/css/components/_main-frame.styl
+++ b/src/css/components/_main-frame.styl
@@ -3,3 +3,10 @@
 
   > .content-wrapper
     padding-bottom: 0
+
+    /* @media 768px */
+    @media (min-width: 768px)
+      text-align: center
+
+    > .text-box
+      text-align: left
