about frame (tablet)

--- a/src/css/objects/_wrappers.styl
+++ b/src/css/objects/_wrappers.styl
@@ -18,3 +18,7 @@
   /* @media 768px */
   @media (min-width: 768px)
     padding: 2.5em
+    text-align: center
+
+    > .text-box
+      text-align: left
