photography frame (tablet)

--- a/src/css/components/_photography-frame.styl
+++ b/src/css/components/_photography-frame.styl
@@ -1,2 +1,7 @@
 .photography-frame
   background-image: url('../images/letter-l.png')
+
+  > .content-wrapper
+
+    > .photo
+      max-width: 100%
