small slideshow fame (tablet)

--- a/src/css/components/_smallslideshow-frame.styl
+++ b/src/css/components/_smallslideshow-frame.styl
@@ -1,6 +1,11 @@
 .smallslideshow-frame
   background-image: url('../images/letter-l.png')
 
+  .item img
+    width: 100%
+    margin-right: auto
+    margin-left: auto
+
   .left
     margin-left: -0.5em
   .right
