--- a/src/css/objects/_arrows.styl
+++ b/src/css/objects/_arrows.styl
@@ -10,6 +10,10 @@
   background-color: #fff
   opacity: 1
 
+  /* @media 768px */
+  @media (min-width: 768px)
+    margin-top: 30%
+
 .carousel-control.left
   margin-left: 0.5em
 .carousel-control.right
