--- a/src/css/components/_header-content.styl
+++ b/src/css/components/_header-content.styl
@@ -13,6 +13,10 @@
   transform: translateX(120%)
   transition: all 0.5s
 
+  /* @media 768px */
+  @media (min-width: 768px)
+    width: 40%
+
   > .togglebutton
     display: block
     float: left
