--- a/src/css/components/_main-frame.styl
+++ b/src/css/components/_main-frame.styl
@@ -3,3 +3,11 @@
 
   > .content-wrapper
     padding-bottom: 0
+
+    > .text-box
+      float: left
+      margin-left: 10%
+
+    > .photo
+      float: right
+
