--- a/src/css/components/_main-frame.styl
+++ b/src/css/components/_main-frame.styl
@@ -5,9 +5,13 @@
     padding-bottom: 0
 
     > .text-box
-      float: left
-      margin-left: 10%
+      /* @media 1024px */
+      @media (min-width: 1024px)
+        float: left
+        margin-left: 10%
 
     > .photo
-      float: right
+      /* @media 1024px */
+      @media (min-width: 1024px)
+        float: right
 
