--- a/src/css/objects/_wrappers.styl
+++ b/src/css/objects/_wrappers.styl
@@ -29,7 +29,11 @@
       /* @media 1024px */
       @media (min-width: 1024px)
         max-width: calc(40%)
-        margin-top: 12%
+        margin-top: 2%
+
+      /* @media 1336px */
+      @media (min-width: 1336px)
+        margin-top: 8%
 
     > .photo
       max-width: 50%
