--- a/src/css/components/_photography-frame.styl
+++ b/src/css/components/_photography-frame.styl
@@ -3,5 +3,16 @@
 
   > .content-wrapper
 
+    > .text-box
+      /* @media 1024px */
+      @media (min-width: 1024px)
+        float: left
+        margin-left: 5%
+
     > .photo
       max-width: 100%
+
+      /* @media 1024px */
+      @media (min-width: 1024px)
+        float: right
+        width: 50%
