--- a/src/css/components/_main-frame.styl
+++ b/src/css/components/_main-frame.styl
@@ -10,6 +10,10 @@
         float: left
         margin-left: 10%
 
+      /* @media 1336px */
+      @media (min-width: 1336px)
+        margin-top: 8%
+
     > .photo
       /* @media 1024px */
       @media (min-width: 1024px)
