--- a/src/css/components/_header-content.styl
+++ b/src/css/components/_header-content.styl
@@ -17,6 +17,10 @@
   @media (min-width: 768px)
     width: 40%
 
+  /* @media 1024px */
+  @media (min-width: 1024px)
+    width: 25%
+
   > .togglebutton
     display: block
     float: left
