--- a/src/css/components/_toggle-menu.styl
+++ b/src/css/components/_toggle-menu.styl
@@ -2,6 +2,10 @@
   float: right
   margin-right: 1em
 
+  /* @media 768px */
+  @media (min-width: 768px)
+    margin-right: 2em
+
   > .title
     display: inline-block
     margin-right: 0.8em
