--- a/src/css/objects/_wrappers.styl
+++ b/src/css/objects/_wrappers.styl
@@ -1,3 +1,8 @@
+.general-wrapper
+  max-width: 1600px
+  margin-right: auto
+  margin-left: auto
+
 .frame
   margin: 1em
   background-color: color_lightgray
