add center object

--- a/src/css/components/_contact.styl
+++ b/src/css/components/_contact.styl
@@ -6,17 +6,15 @@
     > .description
       /* @media 1024px */
       @media (min-width: 1024px)
+        @extend .centralized
         max-width: 70%
-        margin-right: auto
-        margin-left: auto
 
     > .contact-form
       /* @media 1024px */
       @media (min-width: 1024px)
+        @extend .centralized
         max-width: 40%
         margin-top: 2.5em
-        margin-right: auto
-        margin-left: auto
 
 
       > .field
