--- a/src/css/main.styl
+++ b/src/css/main.styl
@@ -20,6 +20,7 @@
 // OBJECTS
 @import 'objects/_general'
 @import 'objects/_clearfix'
+@import 'objects/_centralized'
 @import 'objects/_wrappers'
 @import 'objects/_arrows'
 @import 'objects/_fields'
