--- a/src/css/components/_smallslideshow-frame.styl
+++ b/src/css/components/_smallslideshow-frame.styl
@@ -5,13 +5,11 @@
     /* @media 1024px */
     @media (min-width: 1024px)
       max-width: 50%
-      margin-right: auto
-      margin-left: auto
+      @extend .centralized
 
     .item img
       width: 100%
-      margin-right: auto
-      margin-left: auto
+      @extend .centralized
 
     .left
       margin-left: -0.5em
