arrows size adjusts

--- a/src/css/objects/_arrows.styl
+++ b/src/css/objects/_arrows.styl
@@ -12,12 +12,14 @@
 
   /* @media 768px */
   @media (min-width: 768px)
-    margin-top: 30%
+    margin-top: 28%
+    height: 64px
+    padding: 0.8em
 
 .carousel-control.left
-  margin-left: 0.5em
+  margin-left: 0.8em
 .carousel-control.right
-  margin-right: 0.5em
+  margin-right: 0.8em
 
 .back
 .next
