fix letter o of large slideshow frame

--- a/src/css/components/_largeslideshow-frame.styl
+++ b/src/css/components/_largeslideshow-frame.styl
@@ -1,5 +1,14 @@
 .largeslideshow-frame
-  background-image: url('../images/letter-l.png')
 
   > .content-wrapper
     padding: 0
+
+    .letterbg
+      z-index: 500
+      position: absolute
+      left: 0
+      height: 100%
+
+    .carousel-inner
+      max-height: 90vh
+
